--- a/src/components/Box/box.scss
+++ b/src/components/Box/box.scss
@@ -55,5 +55,6 @@
 @include small-mobile {
   .box{
     font-size: 12px;
+    width: 100%;
   }
 }
